# ft

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP.md  debug_generation.py  debug_training_data.py  generation_debug_results.json  generation_test_results.json  passwords.yml.example  poetry.toml  pyproject.toml  quick_test.py  setup.sh  test_5_epochs.py  train.yml
data/: README.md
dev/experiments/: README.md
dev/experiments/comparisons/: official_mlx_comparison.py  test_lora_vs_base_accuracy.py  test_mlx_training_comparison.py  test_model_loading_comparison.py
dev/experiments/debug/: debug_base_model.py  debug_generation.py  debug_lora_generation.py  debug_lora_loading.py  debug_model_state.py  generation_fix_summary.md  parameter_alignment_analysis.md  prompt_formatting_fix.md  retrain_lora_fixed.py  token_generation_quality_analysis.md
dev/experiments/mlx/: test_direct_mlx_format.py  test_e2e_mlx_data.py  test_mlx_data_loader.py
dev/experiments/results/: generation_debug_results.json  generation_test_results.json
dev/experiments/standalone/: test_base_model_standalone.py  test_tinyllama_chat_standalone.py  test_tinyllama_transformers.py
dev/experiments/validation/: test_mlx_compatibility.py
docs/: ENHANCED_TRAINING_LOGS.md  MLX_GENERATION_ANALYSIS.md  MODEL_TESTING.md  SETUP.md
docs/design/: ARCHITECTURE.md  E2E_TESTING.md  END-TO-END.md  GPT_CRITIQUE.md  LORA-TRAIN.md  LORA_TRAINING_REWRITE_PLAN.md  MLX_ARCHITECTURE.md  MLX_INTEGRATION.md  OUTPUT.md  PHASE2_PLAN.md  PROJECT_STRUCTURE.md  STATUS.md  TECH_STACK.md  TEST_SUITE_FIXES.md
docs/perf/: METHODOLOGY.md
docs/security/: gitleaks-testing.md  rh-precommit-setup.md
docs/testing/: COMMON_TEST_UTILITIES.md
examples/: quick_start.py  sample_dataset.json  train_lora.py
scripts/: benchmark.py  debug_layer_internals.py  debug_mlx_attention.py  debug_mlx_forward.py  debug_mlx_weights.py  debug_rmsnorm.py  generate_training_data.py  run_tests.sh  setup_dev.sh  setup_mlx.py  test_latest_model.sh  test_model_generation.py  test_model_generation_auto.py  test_model_generation_portable.py
scripts/completion/: ft-make-completion.bash  ft-make-completion.zsh
src/finetune/: __init__.py  __main__.py
src/finetune/backends/: base.py  device.py  mlx_backend.py  torch_backend.py
src/finetune/cli/: app.py  utils.py
src/finetune/cli/commands/: dataset.py  model.py  train.py
src/finetune/config/: __init__.py  config.py  manager.py  profiles.py  validator.py
src/finetune/core/: config.py  registry.py
src/finetune/data/: __init__.py  exceptions.py  loaders.py  mlx_loader.py  templates.py  validation.py
src/finetune/inference/: generation.py  mlx_utils.py
src/finetune/models/: base.py  manager.py  mlx_loader.py  mlx_models.py  torch_loader.py
src/finetune/training/: __init__.py  lora.py  trainer.py  workflow.py
src/finetune/utils/: __init__.py  chat.py
tests/: conftest.py  test_refactoring_example.py
tests/integration/: test_end_to_end_mlx.py  test_end_to_end_ollama.py  test_end_to_end_real_model.py  test_end_to_end_workflow.py  test_generation_only.py  test_generation_post_finetune.py  test_model_manager.py
tests/lora/: lora.py  models.py  utils.py
tests/unit/: test_cli.py  test_lora.py  test_lora_legacy.py  test_mlx_loader.py  test_mlx_models.py  test_model_base.py  test_model_loading.py  test_torch_loader.py
tests/unit/config/: test_config.py
tests/unit/data/: test_loaders.py  test_standard_loader.py  test_templates.py
tests/unit/training/: test_lora.py
tests/utils/: __init__.py  test_helpers.py
